--- a/app/views/admin/jobs/new.haml
+++ b/app/views/admin/jobs/new.haml
@@ -30,55 +30,55 @@
           %h4.c-drk-gray Position Info
         .small-12.medium-8.columns
           .field
-            .c-drk-gray= f.label :title, "Position Title"
+            = f.label :title, "Position Title"
             = f.text_field :title
           .field.m-top-20
-            .c-drk-gray= f.label :location, "Location"
+            = f.label :location, "Location"
             = f.text_field :location
           .field.m-top-20
-            .c-drk-gray= f.label :description, "Description"
+            = f.label :description, "Description"
             = f.text_area :description, :rows => 10
           .field.m-top-20
-            .c-drk-gray= f.label :area1_title, "Section One Title"
+            = f.label :area1_title, "Section One Title"
             = f.text_field :area1_title
           .field.m-top-20
-            .c-drk-gray= f.label :area1_copy, "Section One Copy"
+            = f.label :area1_copy, "Section One Copy"
             = f.text_area :area1_copy, :class => "tinymce", :id => "area1", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area2_title, "Section Two Title"
+            = f.label :area2_title, "Section Two Title"
             = f.text_field :area2_title
           .field.m-top-20
-            .c-drk-gray= f.label :area2_copy, "Section Two Copy"
+            = f.label :area2_copy, "Section Two Copy"
             = f.text_area :area2_copy, :class => "tinymce", :id => "area2", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area3_title, "Section Three Title"
+            = f.label :area3_title, "Section Three Title"
             = f.text_field :area3_title
           .field.m-top-20
-            .c-drk-gray= f.label :area3_copy, "Section Three Copy"
+            = f.label :area3_copy, "Section Three Copy"
             = f.text_area :area3_copy, :class => "tinymce", :id => "area3", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area4_title, "Section Four Title"
+            = f.label :area4_title, "Section Four Title"
             = f.text_field :area4_title
           .field.m-top-20
-            .c-drk-gray= f.label :area4_copy, "Section Four Copy"
+            = f.label :area4_copy, "Section Four Copy"
             = f.text_area :area4_copy, :class => "tinymce", :id => "area4", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area5_title, "Section Five Title"
+            = f.label :area5_title, "Section Five Title"
             = f.text_field :area5_title
           .field.m-top-20
-            .c-drk-gray= f.label :area5_copy, "Section Five Copy"
+            = f.label :area5_copy, "Section Five Copy"
             = f.text_area :area5_copy, :class => "tinymce", :id => "area5", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area6_title, "Section Six Title"
+            = f.label :area6_title, "Section Six Title"
             = f.text_field :area6_title
           .field.m-top-20
-            .c-drk-gray= f.label :area6_copy, "Section Six Copy"
+            = f.label :area6_copy, "Section Six Copy"
             = f.text_area :area6_copy, :class => "tinymce", :id => "area6", :rows => 20, :cols => 80
           .field.m-top-20
-            .c-drk-gray= f.label :area7_title, "Section Seven Title"
+            = f.label :area7_title, "Section Seven Title"
             = f.text_field :area7_title
           .field.m-top-20
-            .c-drk-gray= f.label :area7_copy, "Section Seven Copy"
+            = f.label :area7_copy, "Section Seven Copy"
             = f.text_area :area7_copy, :class => "tinymce", :id => "area7", :rows => 20, :cols => 80
 
 = tinymce
