--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import 'bourbon';
 @import 'foundation.min';
 @import 'bitters/bitters';
+@import 'classic';
+@import 'classic.date';
 
 @import 'base/base';
 @import 'slick';
