--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,10 @@
   <div class="container"><%= yield %></div>
   <script>
     $(document).foundation();
+
+    $('.datepicker').pickadate({
+      format: 'mmmm dd, yyyy'
+    });
     
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
