JJ: pull thumb for carousel image

--- a/app/views/admin/carousels/index.haml
+++ b/app/views/admin/carousels/index.haml
@@ -26,7 +26,7 @@
         - @carousels.each do |carousel|
           %tr
             %td.ta-center.c-drk-gray
-              = image_tag carousel.carousel_image.to_s
+              = image_tag carousel.carousel_image.thumb.to_s
             %td.ta-center.c-drk-gray
               - if carousel.overview?
                 %span{"data-icon" => "Q"}
