--- a/app/views/admin/jobs/new.haml
+++ b/app/views/admin/jobs/new.haml
@@ -8,7 +8,7 @@
               = pluralize(@job.errors.count, "error")
               prohibited this practicearea from being saved:
             %ul
-              - @@job.errors.full_messages.each do |msg|
+              - @job.errors.full_messages.each do |msg|
                 %li= msg
     .strata-mini.bgc-white.w-100.p-relative{"data-magellan-expedition" => "fixed"}
       .row.p-top-20
