--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -87,3 +87,8 @@
             .admin-item
               %span.admin-icon{"data-icon" => "F"}
               %h6.m-top-30 Images
+        %li
+          = link_to admin_posts_path do
+            .admin-item
+              %span.admin-icon{"data-icon" => "S"}
+              %h6.m-top-30 Blog Posts
