--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -6,6 +6,10 @@
 	background-color: $lighter-gray;
 }
 
+.nav-blog {
+	background-color: $white;
+}
+
 .nav-inner {
 	padding-top: 20px;
 	padding-bottom: 20px;
