--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,7 +15,12 @@
     $(document).foundation();
 
     $('.datepicker').pickadate({
-      format: 'mmmm dd, yyyy'
+      format: 'mmmm dd, yyyy',
+      onStart: function ()
+        {
+          var date = new Date();
+          this.set('select', [date.getFullYear(), date.getMonth(), date.getDate()]);
+        },
     });
     
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
