--- a/app/views/admin/posts/edit.haml
+++ b/app/views/admin/posts/edit.haml
@@ -39,6 +39,9 @@
             = f.label :author, "Author"
             = f.text_field :author
           .field
+            = f.label :share_text, "Share Text"
+            = f.text_field :share_text
+          .field
             = f.label :body, "Post"
             = f.text_field :body, :class => "tinymce", :id => "post", :rows => 150, :cols => 80
 
