updates to tests, and blog

--- a/app/views/layouts/_blog_footer.haml
+++ b/app/views/layouts/_blog_footer.haml
@@ -3,4 +3,4 @@
 		.small-12.columns
 			%p
 				%small
-					&copy; Bloom Consulting Group, 2014  |  All Rights Reserved
+					&copy; Bloom Consulting Group, #{ Time.now.year } |  All Rights Reserved
