--- a/app/views/posts/show.haml
+++ b/app/views/posts/show.haml
@@ -12,7 +12,7 @@
       %p.m-top-30
         %small{style: "text-transform: uppercase;"} share:
       %h4.d-inline-block
-        %a.twitter-share-button{"data-lang" => "en", "data-text" => "", "onclick" => "window.open('https://twitter.com/share', 'newwindow', 'width=500, height=300'); return false;"}
+        %a.twitter-share-button{"data-lang" => "en", "data-text" => "test", "onclick" => "window.open('https://twitter.com/share', 'newwindow', 'width=500, height=300'); return false;"}
           %span{"data-icon" => "l"}
 .strata
   .row
